# bare-metal-c-cxx-lib

./: CMakeLists.txt  cortex-m3.cmake  cortex-m4.cmake  thumbv7em-none-eabihf.cmake  thumbv7m-none-eabi.cmake
cmake/: arm-post.cmake  arm.cmake
compiler-rt/: CMakeLists.txt
llvm/cmake/modules/: HandleLLVMOptions.cmake
picolibc/: CMakeLists.txt
picolibc/newlib/libc/stdlib/: CMakeLists.txt  wcstold.c
preset/: cortex-m23.cmake  cortex-m3.cmake  cortex-m33.cmake  cortex-m4.cmake  thumbv7em-none-eabi.cmake  thumbv7em-none-eabihf.cmake  thumbv7m-none-eabi.cmake  thumbv8m.base-none-eabi.cmake  thumbv8m.main-none-eabi.cmake  thumbv8m.main-none-eabihf.cmake
