cmake_minimum_required(VERSION 3.20)

project(emlib VERSION 17.0.2)

include(ExternalProject)

set(EMLIB_INSTALL_DIR "${CMAKE_BINARY_DIR}/install")

set(target_triple thumbv7m-none-eabi)
set(runtimes_cxx_flags "-nostdlibinc -isystem${EMLIB_INSTALL_DIR}/include")

set(cmake_args
-Wno-dev
-DCMAKE_BUILD_TYPE=MinSizeRel
-DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
# Let CMake know we're cross-compiling
-DCMAKE_SYSTEM_NAME=Generic
-DCMAKE_SYSTEM_PROCESSOR=arm
-DCMAKE_TRY_COMPILE_TARGET_TYPE=STATIC_LIBRARY
-DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
)
set(cmake_asm_args
-DCMAKE_ASM_COMPILER_TARGET=${target_triple}
)
set(cmake_c_args
-DCMAKE_C_COMPILER_TARGET=${target_triple}
)
set(cmake_cxx_args
-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
-DCMAKE_CXX_COMPILER_TARGET=${target_triple}
-DCMAKE_CXX_FLAGS=${runtimes_cxx_flags}
)

add_subdirectory(compiler-rt)

ExternalProject_Add(picolibc
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/picolibc"
	PREFIX picolibc
	INSTALL_DIR "${EMLIB_INSTALL_DIR}"
	CMAKE_ARGS ${cmake_args} ${cmake_asm_args} ${cmake_c_args}
		-DNEWLIB_GLOBAL_ERRNO=ON
		-DPICOLIBC_TLS=OFF
		# -D__SINGLE_THREAD__=ON
	STEP_TARGETS build
	USES_TERMINAL_CONFIGURE TRUE
	USES_TERMINAL_BUILD TRUE
	USES_TERMINAL_INSTALL TRUE
	USES_TERMINAL_TEST TRUE
	LIST_SEPARATOR ,
	# Always run the build command so that incremental builds are correct.
	BUILD_ALWAYS TRUE
	CONFIGURE_HANDLED_BY_BUILD TRUE
)

ExternalProject_Add(libcxx
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/llvm-project/runtimes"
	PREFIX libcxx
	INSTALL_DIR "${EMLIB_INSTALL_DIR}"
	DEPENDS picolibc compiler-rt
	CMAKE_ARGS ${cmake_args} ${cmake_asm_args} ${cmake_c_args} ${cmake_cxx_args}
		-DLLVM_BINARY_DIR=OFF
		-DLLVM_ENABLE_RUNTIMES=libcxx,libcxxabi
		-DLLVM_DEFAULT_TARGET_TRIPLE=${target_triple}
		-DLLVM_INCLUDE_TESTS=OFF
		-DLIBCXX_CXX_ABI=libcxxabi
		-DLIBCXX_ENABLE_FILESYSTEM=OFF
		-DLIBCXX_ENABLE_SHARED=OFF
		-DLIBCXX_ENABLE_STATIC=ON
		-DLIBCXX_INCLUDE_BENCHMARKS=OFF
		-DLIBCXX_ENABLE_EXCEPTIONS=OFF
		-DLIBCXX_ENABLE_MONOTONIC_CLOCK=OFF
		-DLIBCXX_ENABLE_RANDOM_DEVICE=OFF
		-DLIBCXX_ENABLE_RTTI=OFF
		-DLIBCXX_ENABLE_THREADS=OFF
		-DLIBCXX_ENABLE_LOCALIZATION=OFF
		-DLIBCXX_USE_COMPILER_RT=ON
		# -DLIBCXX_ENABLE_WIDE_CHARACTERS=OFF
		-DLIBCXXABI_BAREMETAL=ON
		-DLIBCXXABI_ENABLE_ASSERTIONS=OFF
		-DLIBCXXABI_ENABLE_SHARED=OFF
		-DLIBCXXABI_ENABLE_STATIC=ON
		-DLIBCXXABI_USE_COMPILER_RT=ON
		-DLIBCXXABI_USE_LLVM_UNWINDER=ON
		-DLIBCXXABI_ENABLE_EXCEPTIONS=OFF
		-DLIBCXXABI_ENABLE_THREADS=OFF
	STEP_TARGETS build
	USES_TERMINAL_CONFIGURE TRUE
	USES_TERMINAL_BUILD TRUE
	USES_TERMINAL_INSTALL TRUE
	USES_TERMINAL_TEST TRUE
	LIST_SEPARATOR ,
	# Always run the build command so that incremental builds are correct.
	BUILD_ALWAYS TRUE
	CONFIGURE_HANDLED_BY_BUILD TRUE
)

