cmake_minimum_required(VERSION 3.20)

project(emlib VERSION 17.0.2)

include(ExternalProject)

if(NOT EMLIB_INSTALL_DIR)
	set(EMLIB_INSTALL_DIR "${CMAKE_BINARY_DIR}/install")
endif(NOT EMLIB_INSTALL_DIR)

if(NOT EMLIB_ARCH)
	set(EMLIB_ARCH "armv7m") # arch name, must support by compiler-rt
endif(NOT EMLIB_ARCH)

if(NOT EMLIB_ABI)
	set(EMLIB_ABI "eabi") # "abi, ex: eabi, eabihf
endif(NOT EMLIB_ABI)

if(NOT EMLIB_ARCH_FLAGS)
	set(EMLIB_ARCH_FLAGS "-march=armv7m -mfloat-abi=soft -mfpu=none") # detail flags, ex: -march=armv7m -mfloat-abi=soft -mfpu=none
endif(NOT EMLIB_ARCH_FLAGS)

set(target_triple "${EMLIB_ARCH}-none-${EMLIB_ABI}")

set(cmake_args
-Wno-dev
-DCMAKE_BUILD_TYPE=MinSizeRel
-DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
# Let CMake know we're cross-compiling
-DCMAKE_SYSTEM_NAME=Generic
-DCMAKE_SYSTEM_PROCESSOR=${EMLIB_ARCH}
-DCMAKE_TRY_COMPILE_TARGET_TYPE=STATIC_LIBRARY
-DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
-DCMAKE_ASM_COMPILER=${CMAKE_C_COMPILER}
)
set(cmake_asm_args
-DCMAKE_ASM_COMPILER_TARGET=${target_triple}
"-DCMAKE_ASM_FLAGS=${EMLIB_ARCH_FLAGS} -nostdlibinc"
)
set(cmake_c_args
-DCMAKE_C_COMPILER_TARGET=${target_triple}
"-DCMAKE_C_FLAGS=${EMLIB_ARCH_FLAGS} -nostdlibinc"
)
set(cmake_cxx_args
-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
-DCMAKE_CXX_COMPILER_TARGET=${target_triple}
"-DCMAKE_CXX_FLAGS=${EMLIB_ARCH_FLAGS} -nostdlibinc -fno-exceptions -isystem${EMLIB_INSTALL_DIR}/include"
)

ExternalProject_Add(compiler-rt
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/llvm-project/runtimes"
	PREFIX compiler-rt
	INSTALL_DIR "${EMLIB_INSTALL_DIR}"
	CMAKE_ARGS ${cmake_args} ${cmake_asm_args} ${cmake_c_args} ${cmake_cxx_args}
		-DLLVM_BINARY_DIR=OFF
		-DLLVM_ENABLE_RUNTIMES=compiler-rt
		-DLLVM_DEFAULT_TARGET_TRIPLE=${target_triple}
		-DLLVM_INCLUDE_TESTS=OFF
		-DCOMPILER_RT_BAREMETAL_BUILD=ON
		-DCOMPILER_RT_BUILD_BUILTINS=ON
		-DCOMPILER_RT_BUILD_LIBFUZZER=OFF
		-DCOMPILER_RT_BUILD_PROFILE=OFF
		-DCOMPILER_RT_BUILD_SANITIZERS=OFF
		-DCOMPILER_RT_BUILD_XRAY=OFF
		-DCOMPILER_RT_BUILD_ORC=OFF
		-DCOMPILER_RT_BUILD_MEMPROF=OFF
		-DCOMPILER_RT_BUILD_GWP_ASAN=OFF
		-DCOMPILER_RT_DEFAULT_TARGET_ONLY=ON
		-DCOMPILER_RT_INCLUDE_TESTS=OFF
	STEP_TARGETS build
	USES_TERMINAL_CONFIGURE TRUE
	USES_TERMINAL_BUILD TRUE
	USES_TERMINAL_INSTALL TRUE
	USES_TERMINAL_TEST TRUE
	LIST_SEPARATOR ,
	CONFIGURE_HANDLED_BY_BUILD TRUE
	INSTALL_BYPRODUCTS "${EMLIB_INSTALL_DIR}/lib/${CMAKE_SYSTEM_NAME}/libclang_rt.builtins-${EMLIB_ARCH}.a"
)

ExternalProject_Add(picolibc
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/picolibc"
	PREFIX picolibc
	INSTALL_DIR "${EMLIB_INSTALL_DIR}"
	CMAKE_ARGS ${cmake_args} ${cmake_asm_args} ${cmake_c_args}
		-DNEWLIB_GLOBAL_ERRNO=ON
		-DPICOLIBC_TLS=OFF
		# -D__SINGLE_THREAD__=ON
	STEP_TARGETS build
	USES_TERMINAL_CONFIGURE TRUE
	USES_TERMINAL_BUILD TRUE
	USES_TERMINAL_INSTALL TRUE
	USES_TERMINAL_TEST TRUE
	LIST_SEPARATOR ,
	CONFIGURE_HANDLED_BY_BUILD TRUE
	INSTALL_BYPRODUCTS "${EMLIB_INSTALL_DIR}/lib/libc.a"
)

ExternalProject_Add(libcxx
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/llvm-project/runtimes"
	PREFIX libcxx
	INSTALL_DIR "${EMLIB_INSTALL_DIR}"
	DEPENDS picolibc compiler-rt
	CMAKE_ARGS ${cmake_args} ${cmake_asm_args} ${cmake_c_args} ${cmake_cxx_args}
		-DLLVM_BINARY_DIR=OFF
		-DLLVM_ENABLE_RUNTIMES=libcxx,libcxxabi
		-DLLVM_DEFAULT_TARGET_TRIPLE=${target_triple}
		-DLLVM_INCLUDE_TESTS=OFF
		-DLIBCXX_CXX_ABI=libcxxabi
		-DLIBCXX_ENABLE_FILESYSTEM=OFF
		-DLIBCXX_ENABLE_SHARED=OFF
		-DLIBCXX_ENABLE_STATIC=ON
		-DLIBCXX_INCLUDE_BENCHMARKS=OFF
		-DLIBCXX_ENABLE_EXCEPTIONS=OFF
		-DLIBCXX_ENABLE_MONOTONIC_CLOCK=OFF
		-DLIBCXX_ENABLE_RANDOM_DEVICE=OFF
		-DLIBCXX_ENABLE_RTTI=OFF
		-DLIBCXX_ENABLE_THREADS=OFF
		-DLIBCXX_ENABLE_LOCALIZATION=OFF
		-DLIBCXX_USE_COMPILER_RT=ON
		# -DLIBCXX_ENABLE_WIDE_CHARACTERS=OFF
		-DLIBCXXABI_BAREMETAL=ON
		-DLIBCXXABI_ENABLE_ASSERTIONS=OFF
		-DLIBCXXABI_ENABLE_SHARED=OFF
		-DLIBCXXABI_ENABLE_STATIC=ON
		-DLIBCXXABI_USE_COMPILER_RT=ON
		-DLIBCXXABI_USE_LLVM_UNWINDER=ON
		-DLIBCXXABI_ENABLE_EXCEPTIONS=OFF
		-DLIBCXXABI_ENABLE_THREADS=OFF
		-DCOMPILER_RT_LIBRARY_builtins_${target_triple}=${EMLIB_INSTALL_DIR}/lib/${CMAKE_SYSTEM_NAME}/libclang_rt.builtins-${EMLIB_ARCH}.a
	STEP_TARGETS build
	USES_TERMINAL_CONFIGURE TRUE
	USES_TERMINAL_BUILD TRUE
	USES_TERMINAL_INSTALL TRUE
	USES_TERMINAL_TEST TRUE
	LIST_SEPARATOR ,
	CONFIGURE_HANDLED_BY_BUILD TRUE
	INSTALL_BYPRODUCTS "${EMLIB_INSTALL_DIR}/lib/libc++.a"
)

string(REGEX REPLACE " +" ";" arch_flags ${EMLIB_ARCH_FLAGS})

add_library(libc INTERFACE)
target_link_libraries(libc INTERFACE "${EMLIB_INSTALL_DIR}/lib/libc.a")
target_include_directories(libc SYSTEM INTERFACE "${EMLIB_INSTALL_DIR}/include")
target_compile_options(libc INTERFACE "--target=${target_triple}" ${arch_flags} "-nostdlibinc")
target_link_options(libc INTERFACE "--target=${target_triple}" ${arch_flags} "-nodefaultlibs")
add_dependencies(libc picolib)

add_library(libc++ INTERFACE)
target_link_libraries(libc++ INTERFACE "${EMLIB_INSTALL_DIR}/lib/libc++.a")
target_include_directories(libc++ SYSTEM INTERFACE "${EMLIB_INSTALL_DIR}/include/c++/v1")
target_compile_options(libc++ INTERFACE "-fno-exceptions" "-fno-rtti")
target_link_libraries(libc++ INTERFACE libc)
add_dependencies(libc++ libcxx)
